--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,8 +12,10 @@
     <div class="wrap nav-content">
       <a href="{{ url_for('main.index') }}" class="logo">Flask Modern</a>
       <nav>
+        <a href="{{ url_for('main.docs') }}">Docs</a>
+        <a href="{{ url_for('main.components') }}">Components</a>
         {% if current_user.is_authenticated %}
-          <a href="{{ url_for('main.index') }}">Home</a>
+          <a href="{{ url_for('main.dashboard') }}">Dashboard</a>
           {% if current_user.is_admin %}
             <a href="{{ url_for('admin.admin_dashboard') }}">Admin</a>
           {% endif %}
